- fix broken css

--- a/OneSelf-Website/css/one.css
+++ b/OneSelf-Website/css/one.css
@@ -533,10 +533,10 @@ input[type='button']:hover {
     background: #f05a43;
 }
 
-.content-slider{
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
+.content-slider {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content-slider-container {
@@ -544,24 +544,26 @@ input[type='button']:hover {
     background: #f2ae1c;
 }
 
-.slick-slider{
+.slick-slider {
     margin-bottom: 0%;
 }
 
-.slick-prev{
+.slick-prev {
     height: 58px;
     left: -85px;
 }
 
-.slick-next{
+.slick-next {
     height: 58px;
     right: -85px;
 }
-.no-profit .empower { padding: 5em }
-.no-profit .profit-content a.button:hover { background: #D30E00 }
-=======
+
 .no-profit .empower {
     padding: 5em
+}
+
+.no-profit .profit-content a.button:hover {
+    background: #D30E00
 }
 
 .no-profit .profit-content a.button:hover {
@@ -660,11 +662,9 @@ input[type='button']:hover {
     line-height: 130%;
 }
 
-
 .enable-smart-life .content p:not(:first-child) {
     margin-top: 5px;
 }
-
 
 div.quest-content p {
     line-height: 1.2em
@@ -1013,7 +1013,7 @@ div.quest-content p {
 }
 
 /* unite section */
-.unite-heading{
+.unite-heading {
     font-family: Raleway-light;
 }
 
